scribble-cli/src/test/resources/good/wfchoice/merge/Test01.scr
module good.wfchoice.merge.Test01;


global protocol Proto1(role A, role B, role C)
{
	choice at A
	{
		1() from A to B;
		3() from B to C;
	}
	or
	{
		2() from A to B;
		3() from B to C;  // Testing same continuation for C (mergability, rather than just factoring out)
	}
}

